v0.1 - 2015-02-18
- moved netcdf classes out of rs data readers
v0.1.1 - 2015-02-19
- fixed issue #4
v0.1.2 - 2015-08-04
- fixed issue #9
v0.1.3 - 2015-08-10
- fixed issue #10
v0.1.4 - 2015-09-22
- updated to use pygeobase as standard interface classes
- use of pygeogrids for images