@@ -9,3 +9,4 @@ v0.1.3 - 2015-08-10
 v0.1.4 - 2015-09-22
 - updated to use pygeobase as standard interface classes
 - use of pygeogrids for images
+- added standard class interface for indexed ragged ts
